--- a/app/bower.json
+++ b/app/bower.json
@@ -1,12 +1,12 @@
 {
-  "name": "bower.json",
+  "name": "app",
+  "homepage": "https://github.com/mromanello/Vergil_in_JSTOR",
   "authors": [
     "mromanello <matteo.romanello@gmail.com>"
   ],
   "description": "",
   "main": "",
   "license": "MIT",
-  "homepage": "",
   "private": true,
   "ignore": [
     "**/.*",
