--- a/app/bower.json
+++ b/app/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "d3": "3.5",
     "bootstrap": "^3.3.7",
-    "d3-tip": "^0.6.7"
+    "d3-tip": "^0.6.7",
+    "bootstrap-select": "^1.10.0"
   }
 }
