--- a/app/bower.json
+++ b/app/bower.json
@@ -19,6 +19,7 @@
     "d3": "3.5",
     "bootstrap": "^3.3.7",
     "d3-tip": "^0.6.7",
-    "bootstrap-select": "^1.10.0"
+    "bootstrap-select": "^1.10.0",
+    "mustache.js": "mustache#^2.2.1"
   }
 }
