--- a/app/bower.json
+++ b/app/bower.json
@@ -20,6 +20,7 @@
     "bootstrap": "^3.3.7",
     "d3-tip": "^0.6.7",
     "bootstrap-select": "^1.10.0",
-    "mustache.js": "mustache#^2.2.1"
+    "mustache.js": "mustache#^2.2.1",
+    "jquery.scrollTo": "^2.1.2"
   }
 }
