--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,9 @@
+#Options +FollowSymLinks
+#RewriteEngine on
+#RedirectMatch 301 ^(.*)$ http://aeneid.citedloci.org
+
 RewriteEngine on
+RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-d      
 RewriteCond %{REQUEST_FILENAME}\.html -f 
 RewriteRule ^(.*)$ $1.html                  
